Fixed details tag on Webkit Fixed flickering on dark mode

--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -124,6 +124,11 @@ details {
     top: -2px;
     color: var(--md-sys-color-outline);
   }
+
+  // Hide marker on webkit
+  summary::-webkit-details-marker {
+    display: none;
+  }
 }
 
 details[open] {
