--- a/assets/scss/components/_loading.scss
+++ b/assets/scss/components/_loading.scss
@@ -1,18 +1,17 @@
 // https://loading.io/css/
 
 .loading {
+  z-index: 1;
   position: fixed;
-  left: 0;
-  top: 0;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
-  background: rgba(var(--md-sys-color-primary), 0.3);
 }
 
 .lds-ring {
-  position: absolute;
-  top: 50%;
-  left: 50%;
   width: 80px;
   height: 80px;
 }
